# wc-draw

./: .gitignore  CITY_PROBABILITIES_README.md  CITY_PROBABILITIES_SUMMARY.md  COMPLETION_SUMMARY.md  CONTEXT.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_STATUS.md  MIGRATION.md  Makefile  PHASE8_SUMMARY.md  PHASE9_SUMMARY.md  PIPELINE_STATUS.md  PLAN_UEFA_MIN_CONSTRAINT.md  PROJECT_COMPLETE.md  README.md  SCENARIO_ANALYSIS.md  TEST_RESULTS_MIN_UEFA.md  calculate_scotland_cities.py  calculate_scotland_cities_refined.py  check_progress.sh  city_probability_viewer.html  city_team_viewer.html  city_viewer.html  draw_stats.json  group-stage-details  group_locations.txt  group_viewer.html  nohup.out  out  parse_group_locations.py  pipeline_full_regen.sh  pyproject.toml  requirements.txt  run_full_analysis.sh  scenario_stats.json  scotland_city_probabilities.csv  scotland_city_probabilities.txt  scotland_city_probabilities_refined.csv  scotland_city_probabilities_refined.txt  seed_scan_large.out  (+8 more)
docs/: CITY_PROBABILITY_ANALYSIS.md  CITY_PROBABILITY_QUICKSTART.md  SCENARIO_ANALYSIS.md
notebooks/: city_probability_visualization.ipynb  draw_analysis.ipynb  fifa_official_analysis.ipynb  scenario_comparison.ipynb
screenshots/: capture_all.sh  capture_city_views.js  capture_screenshots.py  capture_team_views.js  package.json  run_capture.sh
scripts/: aggregate_fifa_stats.py  aggregate_scenario_stats.py  calculate_all_city_probabilities.py  check_inter_path_2_opponents.py  check_uefa_pot2_pot3_together.py  run_scenario_scans.sh  seed_scan_large.py  seed_scan_scenarios.py
(+42 files in other folders)
